<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnCinco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCinco"
        app:layout_constraintBottom_toTopOf="@+id/btnDos"
        app:layout_constraintEnd_toStartOf="@+id/btnSeis"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnCuatro"
        app:layout_constraintTop_toBottomOf="@+id/btnOcho"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btnSeis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSeis"
        app:layout_constraintBottom_toTopOf="@+id/btnTres"
        app:layout_constraintEnd_toStartOf="@+id/btnRestar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnCinco"
        app:layout_constraintTop_toBottomOf="@+id/btnNueve"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btnUno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnUno"
        app:layout_constraintBottom_toTopOf="@+id/btnCero"
        app:layout_constraintEnd_toStartOf="@+id/btnDos"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCuatro"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btnTres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnTres"
        app:layout_constraintBottom_toTopOf="@+id/btnAns"
        app:layout_constraintEnd_toStartOf="@+id/btnSumar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnDos"
        app:layout_constraintTop_toBottomOf="@+id/btnSeis"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btnDos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnDos"
        app:layout_constraintBottom_toTopOf="@+id/btnPunto"
        app:layout_constraintEnd_toStartOf="@+id/btnTres"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnUno"
        app:layout_constraintTop_toBottomOf="@+id/btnCinco"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btnCero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCero"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnPunto"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUno"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/btnPunto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnPunto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnAns"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnCero"
        app:layout_constraintTop_toBottomOf="@+id/btnDos"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btnSumar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSumar"
        app:layout_constraintBottom_toTopOf="@+id/btnIgual"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnTres"
        app:layout_constraintTop_toBottomOf="@+id/btnRestar"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btnIgual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#80D8FF"
        android:text="@string/btnIgual"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnAns"
        app:layout_constraintTop_toBottomOf="@+id/btnSumar"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btnAns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnAns"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnIgual"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnPunto"
        app:layout_constraintTop_toBottomOf="@+id/btnTres"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btnRestar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnRestar"
        app:layout_constraintBottom_toTopOf="@+id/btnSumar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnSeis"
        app:layout_constraintTop_toBottomOf="@+id/btnMultiplicar"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btnCuatro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCuatro"
        app:layout_constraintBottom_toTopOf="@+id/btnUno"
        app:layout_constraintEnd_toStartOf="@+id/btnCinco"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSiete"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btnMultiplicar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnMultiplicar"
        app:layout_constraintBottom_toTopOf="@+id/btnRestar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnNueve"
        app:layout_constraintTop_toBottomOf="@+id/btnDividir"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btnBorra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnBorra"
        app:layout_constraintBottom_toTopOf="@+id/btnOcho"
        app:layout_constraintEnd_toStartOf="@+id/btnPorcentaje"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnBorrar"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btnNueve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnNueve"
        app:layout_constraintBottom_toTopOf="@+id/btnSeis"
        app:layout_constraintEnd_toStartOf="@+id/btnMultiplicar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnOcho"
        app:layout_constraintTop_toBottomOf="@+id/btnPorcentaje"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btnOcho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnOcho"
        app:layout_constraintBottom_toTopOf="@+id/btnCinco"
        app:layout_constraintEnd_toStartOf="@+id/btnNueve"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnSiete"
        app:layout_constraintTop_toBottomOf="@+id/btnBorra"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btnBorrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnBorrar"
        app:layout_constraintBottom_toTopOf="@+id/btnSiete"
        app:layout_constraintEnd_toStartOf="@+id/btnBorra"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btnSiete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSiete"
        app:layout_constraintBottom_toTopOf="@+id/btnCuatro"
        app:layout_constraintEnd_toStartOf="@+id/btnOcho"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBorrar"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btnDividir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnDividir"
        app:layout_constraintBottom_toTopOf="@+id/btnMultiplicar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnPorcentaje"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btnPorcentaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnPorcentaje"
        app:layout_constraintBottom_toTopOf="@+id/btnNueve"
        app:layout_constraintEnd_toStartOf="@+id/btnDividir"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnBorra"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.5" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="409dp"
        android:layout_height="60dp"
        android:layout_marginTop="76dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtResultado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:text="@string/txtResultado"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.384" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="409dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtOperacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:text="@string/txtOperacion"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>